[workspace]
resolver = "2"
members  = [
    "xtask",
    "esp-alloc",
    "esp-backtrace",
    "esp-bootloader-esp-idf",
    "esp-config",
    "esp-hal",
    "esp-hal-embassy",
    "esp-hal-procmacros",
    "esp-rom-sys",
    "esp-ieee802154",
    "esp-lp-hal",
    "esp-metadata",
    "esp-metadata-generated",
    "esp-println",
    "esp-riscv-rt",
    "esp-wifi",
    "esp-storage",
    "examples",
    "extras/bench-server",
    "extras/esp-wifishark",
    "extras/ieee802154-sniffer",
    "hil-test",
    "qa-test",
    "xtensa-lx",
    "xtensa-lx-rt",
    "xtensa-lx-rt-proc-macros",
]
[workspace.dependencies]
proc-macro2 = "1.0.95"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing", "proc-macro", "clone-impls", "extra-traits", "derive"] }
embassy-sync = { version = "0.7.0" }
defmt = "1.0.1"
