[workspace]
resolver = "2"
members  = ["xtask"]
exclude  = [
    "esp-alloc",
    "esp-backtrace",
    "esp-bootloader-esp-idf",
    "esp-config",
    "esp-hal",
    "esp-hal-embassy",
    "esp-hal-procmacros",
    "esp-rom-sys",
    "esp-ieee802154",
    "esp-lp-hal",
    "esp-metadata",
    "esp-metadata-generated",
    "esp-println",
    "esp-radio-preempt-baremetal",
    "esp-radio-preempt-driver",
    "esp-riscv-rt",
    "esp-wifi",
    "esp-storage",
    "examples",
    "extras/bench-server",
    "extras/esp-wifishark",
    "extras/ieee802154-sniffer",
    "hil-test",
    "qa-test",
    "xtensa-lx",
    "xtensa-lx-rt",
    "xtensa-lx-rt-proc-macros",
]
