[package]
name         = "esp-alloc"
version      = "0.5.0"
edition      = "2021"
rust-version = "1.68"
description  = "A heap allocator for Espressif devices"
repository   = "https://github.com/esp-rs/esp-hal"
license      = "MIT OR Apache-2.0"

keywords = [
    "allocator",
    "esp32",
    "riscv",
    "xtensa",
]
categories = [
    "memory-management",
    "no-std",
]

[package.metadata.docs.rs]
default-target = "riscv32imc-unknown-none-elf"
features       = ["nightly"]

[dependencies]
cfg-if                = "1.0.0"
critical-section      = "1.1.3"
enumset               = "1.1.5"
linked_list_allocator = { version = "0.10.5", default-features = false, features = ["const_mut_refs"] }
document-features = "0.2.10"

[features]
default = []
nightly = []

## Enable this feature if you want to keep stats about the internal heap usage such as:
## - Max memory usage since initialization of the heap
## - Total allocated memory since initialization of the heap
## - Total freed memory since initialization of the heap
##
## ⚠️ Note: Enabling this feature will require extra computation every time alloc/dealloc is called.
internal-heap-stats = []
