[package]
name          = "esp-build"
version       = "0.2.0"
edition       = "2021"
rust-version  = "1.84.0"
description   = "Build utilities for esp-hal"
documentation = "https://docs.espressif.com/projects/rust/"
repository    = "https://github.com/esp-rs/esp-hal"
license       = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote     = "1.0.38"
syn       = { version = "2.0.96", features = ["fold", "full"] }
termcolor = "1.4.1"
