[package]
name = "esp-hal-buzzer"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
description  = "Buzzer driver for esp-hal"
repository   = "https://github.com/esp-rs/esp-hal"
license      = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["esp32c3"]
targets  = ["riscv32imc-unknown-none-elf"]

[dependencies]
defmt             = { version = "0.3.8", optional = true }
document-features = "0.2.10"
esp-hal           = { version = "0.20.0", path = "../esp-hal" }
fugit             = "0.3.7"

[features]
## Implement `defmt::Format` on certain types.
defmt = ["dep:defmt", "esp-hal/defmt"]

#! ### Chip Support Feature Flags
## Target the ESP32.
esp32   = ["esp-hal/esp32"]
## Target the ESP32-C2.
esp32c2 = ["esp-hal/esp32c2"]
## Target the ESP32-C3.
esp32c3 = ["esp-hal/esp32c3"]
## Target the ESP32-C6.
esp32c6 = ["esp-hal/esp32c6"]
## Target the ESP32-H2.
esp32h2 = ["esp-hal/esp32h2"]
## Target the ESP32-S2.
esp32s2 = ["esp-hal/esp32s2"]
## Target the ESP32-S3.
esp32s3 = ["esp-hal/esp32s3"]
