[package]
name    = "esp-hal-common"
version = "0.12.0"
authors = [
    "Jesse Braham <jesse@beta7.io>",
    "Björn Quentin <bjoern.quentin@mobile-j.de>",
]
edition      = "2021"
rust-version = "1.67.0"
description  = "HAL implementations for peripherals common among Espressif devices; should not be used directly"
repository   = "https://github.com/esp-rs/esp-hal"
license      = "MIT OR Apache-2.0"

[dependencies]
bitflags             = "2.4.0"
bitfield             = "0.14.0"
cfg-if               = "1.0.0"
critical-section     = "1.1.2"
defmt                = { version = "=0.3.5", optional = true }
embedded-can         = { version = "0.4.1", optional = true }
embedded-dma         = "0.2.0"
embedded-hal         = { version = "0.2.7", features = ["unproven"] }
embedded-hal-1       = { version = "=1.0.0-rc.1", optional = true, package = "embedded-hal" }
embedded-hal-nb      = { version = "=1.0.0-rc.1", optional = true }
embedded-io          = "0.5.0"
esp-synopsys-usb-otg = { version = "0.3.2", optional = true, features = ["fs", "esp32sx"] }
fugit                = "0.3.7"
log                  = { version = "0.4.20", optional = true }
lock_api             = { version = "0.4.10", optional = true }
nb                   = "1.1.0"
paste                = "1.0.14"
procmacros           = { version = "0.6.1", package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
strum                = { version = "0.25.0", default-features = false, features = ["derive"] }
void                 = { version = "1.0.2", default-features = false }
usb-device           = { version = "0.2.9", optional = true }

# async
embedded-hal-async = { version = "=1.0.0-rc.1", optional = true }
embedded-io-async  = { version = "0.5.0", optional = true }
embassy-executor   = { version = "0.3.0", features = ["integrated-timers"], optional = true }
embassy-sync       = { version = "0.2.0", optional = true }
embassy-time       = { version = "0.1.3", features = ["nightly"], optional = true }
embassy-futures    = { version = "0.1.0", optional = true }

# RISC-V
esp-riscv-rt                = { version = "0.5.0", path = "../esp-riscv-rt", optional = true }
riscv-atomic-emulation-trap = { version = "0.4.0", optional = true }

# Xtensa
xtensa-lx    = { version = "0.8.0",  optional = true }
xtensa-lx-rt = { version = "0.16.0", optional = true }

# Part of `ufmt` containing only `uWrite` trait
ufmt-write = { version = "0.1.0", optional = true }

# IMPORTANT:
# Each supported device MUST have its PAC included below along with a
# corresponding feature.
esp32   = { version = "0.26.0", features = ["critical-section"], optional = true }
esp32c2 = { version = "0.14.0", features = ["critical-section"], optional = true }
esp32c3 = { version = "0.17.0", features = ["critical-section"], optional = true }
esp32c6 = { version = "0.7.0",  features = ["critical-section"], optional = true }
# until new H2 pacs are relesed, required because of https://github.com/esp-rs/esp-pacs/pull/156
esp32h2 = { git = "https://github.com/esp-rs/esp-pacs.git", rev = "2545b66f4c11dd78dc02a3c77c44a78fa5893beb",  features = ["critical-section"], optional = true }
esp32s2 = { version = "0.17.0", features = ["critical-section"], optional = true }
esp32s3 = { version = "0.21.0", features = ["critical-section"], optional = true }

[build-dependencies]
basic-toml = "0.1.4"
serde      = { version = "1.0.188", features = ["derive"] }

[features]
esp32   = ["esp32/rt",   "xtensa", "xtensa-lx/esp32", "xtensa-lx-rt/esp32", "lock_api", "procmacros/esp32"]
esp32c2 = ["esp32c2/rt", "riscv",  "procmacros/esp32c2"]
esp32c3 = ["esp32c3/rt", "riscv",  "procmacros/esp32c3"]
esp32c6 = ["esp32c6/rt", "riscv",  "procmacros/esp32c6"]
esp32h2 = ["esp32h2/rt", "riscv",  "procmacros/esp32h2"]
esp32s2 = ["esp32s2/rt", "xtensa", "xtensa-lx/esp32s2", "xtensa-lx-rt/esp32s2", "esp-synopsys-usb-otg", "usb-device", "procmacros/esp32s2"]
esp32s3 = ["esp32s3/rt", "xtensa", "xtensa-lx/esp32s3", "xtensa-lx-rt/esp32s3", "lock_api", "esp-synopsys-usb-otg", "usb-device", "procmacros/esp32s3"]

# Crystal frequency selection (ESP32 and ESP32-C2 only!)
esp32_26mhz   = []
esp32_40mhz   = []
esp32c2_26mhz = []
esp32c2_40mhz = []

# PSRAM support
psram_2m = []
psram_4m = []
psram_8m = []

# Octal RAM support
opsram_2m = []
opsram_4m = []
opsram_8m = []

# Implement the `embedded-hal==1.0.0-alpha.x` traits
eh1 = ["embedded-hal-1", "embedded-hal-nb", "embedded-can"]

# Enable logging
log = ["dep:log"]

# To support `ufmt`
ufmt = ["ufmt-write"]

# To use vectored interrupts (calling the handlers defined in the PAC)
vectored = ["procmacros/interrupt"]

# Use direct interrupt vectoring (RISC-V only!)
direct-vectoring = ["esp-riscv-rt/direct-vectoring"]

# Use interrupt preemption (RISC-V only!)
interrupt-preemption = ["esp-riscv-rt/interrupt-preemption"]

# Support for asynchronous operation, implementing traits from
# `embedded-hal-async` and `embedded-io-async`
async = ["embedded-hal-async", "eh1", "embassy-sync", "embassy-futures", "embedded-io-async"]

# Embassy support
embassy = ["embassy-time"]

embassy-executor-interrupt = ["embassy", "embassy-executor"]
embassy-executor-thread    = ["embassy", "embassy-executor"]

embassy-time-systick = []
embassy-time-timg0   = []

# Architecture-specific features (intended for internal use)
riscv  = ["critical-section/restore-state-u8", "esp-riscv-rt", "esp-riscv-rt/zero-bss", "riscv-atomic-emulation-trap"]
xtensa = ["critical-section/restore-state-u32"]

# Initialize / clear data sections and RTC memory
rv-init-data     = ["esp-riscv-rt/init-data", "esp-riscv-rt/init-rw-text"]
rv-zero-rtc-bss  = ["esp-riscv-rt/zero-rtc-fast-bss"]
rv-init-rtc-data = ["esp-riscv-rt/init-rtc-fast-data", "esp-riscv-rt/init-rtc-fast-text"]

# Enable the `impl-register-debug` feature for the selected PAC
debug = [
    "esp32?/impl-register-debug",
    "esp32c2?/impl-register-debug",
    "esp32c3?/impl-register-debug",
    "esp32c6?/impl-register-debug",
    "esp32h2?/impl-register-debug",
    "esp32s2?/impl-register-debug",
    "esp32s3?/impl-register-debug",
]

# Enable support for `defmt`, for `esp-hal-common` and also for all our dependencies
defmt = [
    "dep:defmt",
    "embassy-executor?/defmt",
    "embassy-sync?/defmt",
    "embassy-time?/defmt",
    "embassy-futures?/defmt",
    "embedded-hal-1?/defmt-03",
    "embedded-io/defmt-03",
    "embedded-io-async?/defmt-03",
]
